--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 }
 
 body{
-    background-image: url(background.png);
+    background-image: url(./assets/background.png);
     display: flex;
     align-items: center;
     justify-content: center;
